crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_087_Jaleco87_Ninja_Jajamaru_kun_World_Ja_Virtual_Console_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-087-Jaleco87/Ninja Jajamaru-kun (World) (Ja) (Virtual Console).zip
rom_sha256=091c0ca7783e26e87751d1822f0beb64065bfb77815ff1bd72126b3177944e6b
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=80d75e8bc01253a9
checkpoint f900 fb_fnv1a64=c7fa09d1c3622e93
checkpoint f1100 fb_fnv1a64=d7fea5369fd01833
