crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_088_Namco118_Devil_Man_J_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-088-Namco118/Devil Man (J) [!].zip
rom_sha256=d66c79c90909b6c490649bcce4bb9762a3fdd7e973ff5d2bd0f8fc24b81bff16
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=ef96783dc57335ea
checkpoint f900 fb_fnv1a64=ab39e904f9009c69
checkpoint f1100 fb_fnv1a64=ade23dd97248d2eb
