crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_088_Namco118_Namcot_Mahjong_3_Mahjong_Tengoku_J_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-088-Namco118/Namcot Mahjong 3 - Mahjong Tengoku (J) [!].zip
rom_sha256=ec38abac9499296d021dda2f28d05c0c08a58a7dfd0c3d0a208480f323337894
frames=1141
fb_bytes=245760
cycles=33949789
audio_samples=836505
audio_fnv1a64=0435f7de4188dc68
checkpoint f900 fb_fnv1a64=652ee11a1d5290d3
checkpoint f1100 fb_fnv1a64=8fde57f9e4557bc1
